<resources>
    <string name="app_name">Stock Info</string>
    <string name="enter_stock_symbol">Enter A Stock Symbol</string>
    <string name="ticker">Ticker</string>
    <string name="enter_ticker">Enter Ticker</string>
    <string name="add">Add</string>
    <string name="get_info">Get More Info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_price">Latest Price</string>
    <string name="close">Close</string>
    <string name="p_e_ratio">P/E Ratio :</string>
</resources>
